--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@
                                         >
                                     </li>
                                     <li>
-                                        <a href="mailto:info@mydomain.com"
+                                        <a href="mailto:mysttakek@gmail.com"
                                             >mysttakek@gmail.com</a
                                         >
                                     </li>
@@ -924,9 +924,29 @@
                     </div>
                 </div>
                 <!-- /.row -->
+                <div class="row mt-4">
+                    <div class="col-12 text-center">
+                        <p>© Mysttakek 2025</p>
+                        <a
+                            href="mailto:mysttakek@gmail.com"
+                            class="btn btn-outline-light"
+                            style="
+                                text-decoration: none;
+                                padding: 8px 16px;
+                                border-radius: 4px;
+                                border: 1px solid #fff;
+                                color: #fff;
+                                background: none;
+                            "
+                        >
+                            Reportar un error
+                        </a>
+                    </div>
+                </div>
             </div>
             <!-- /.container -->
         </div>
+
         <!-- /.site-footer -->
 
         <!-- Cookie banner -->
