--- a/index.html
+++ b/index.html
@@ -211,7 +211,15 @@
                         data-aos-delay="0"
                     >
                         <div class="feature d-flex">
-                            <span class="bi-bag-check-fill"></span>
+                            <img
+                                src="images/steak-1.png"
+                                alt="Mysttakek"
+                                style="
+                                    object-fit: cover;
+                                    width: 100%;
+                                    height: 100%;
+                                "
+                            />
                             <div>
                                 <h3>Planificación de Asados con Mysttakek</h3>
                                 <p>
@@ -231,7 +239,15 @@
                         data-aos-delay="100"
                     >
                         <div class="feature d-flex">
-                            <span class="bi-wallet-fill"></span>
+                            <img
+                                src="images/steak-2.png"
+                                alt="Mysttakek"
+                                style="
+                                    object-fit: cover;
+                                    width: 100%;
+                                    height: 100%;
+                                "
+                            />
                             <div>
                                 <h3>Técnicas de Parrilla Mysttakek</h3>
                                 <p>
@@ -251,7 +267,15 @@
                         data-aos-delay="200"
                     >
                         <div class="feature d-flex">
-                            <span class="bi-pie-chart-fill"></span>
+                            <img
+                                src="images/steak-3.png"
+                                alt="Mysttakek"
+                                style="
+                                    object-fit: cover;
+                                    width: 100%;
+                                    height: 100%;
+                                "
+                            />
                             <div>
                                 <h3>Resultados Sabrosos con Mysttakek</h3>
                                 <p>
@@ -298,9 +322,6 @@
                         </div>
                         <div class="d-flex mb-3 service-alt">
                             <div>
-                                <span class="bi-wallet-fill me-4"></span>
-                            </div>
-                            <div>
                                 <h3>Análisis del Corte con Mysttakek</h3>
                                 <p>
                                     Comenzamos por evaluar cada pieza: su
@@ -315,9 +336,6 @@
 
                         <div class="d-flex mb-3 service-alt">
                             <div>
-                                <span class="bi-pie-chart-fill me-4"></span>
-                            </div>
-                            <div>
                                 <h3>Estrategias de Cocción Mysttakek</h3>
                                 <p>
                                     Trabajamos junto a nuestros seguidores para
@@ -331,9 +349,6 @@
                         </div>
 
                         <div class="d-flex mb-3 service-alt">
-                            <div>
-                                <span class="bi-bag-check-fill me-4"></span>
-                            </div>
                             <div>
                                 <h3>Enfocados en el Sabor - Mysttakek</h3>
                                 <p>
